--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="parent">
-        <div class="red"></div>
-        <div class="white"></div>
-        <div class="blue"></div>
-        <div class="yellow"></div>
+    <div class="heading">
+        <h1>Color Scheme Switching</h1>
     </div>
+    <div class="parent">
+        <span class="button" id="red"></span>
+        <span class="button" id="white"></span>
+        <span class="button" id="blue"></span>
+        <span class="button" id="yellow"></span>
+    </div>
+    <script src="main.js"></script>
 </body>
 </html>
